==> zhang-haitao-repo/bookReparation/Demo/YSF4_HAL_FreeRTOS-039. FreeRTOS+RS232（串口中断、FIFO机制与PC通信）/Src/bsp/usart/bsp_usartx_fifo.c <==
#include "usart/bsp_usartx_fifo.h"

static void UsartVarInit(void)
{
#if USART1_FIFO_EN == 1
	g_tUsart1.usart = USART1;						        /* STM32 串口设备 */
	g_tUsart1.pTxBuf = g_TxBuf1;					        /* 发送缓冲区指针 */
	g_tUsart1.pRxBuf = g_RxBuf1;					        /* 接收缓冲区指针 */
	g_tUsart1.usTxBufSize = USART1_TX_BUF_SIZE;	/* 发送缓冲区大小 */
	g_tUsart1.usRxBufSize = USART1_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUsart1.usTxWrite = 0;			          			/* 发送FIFO写索引 */
	g_tUsart1.usTxRead = 0;						          /* 发送FIFO读索引 */
	g_tUsart1.usRxWrite = 0;						          /* 接收FIFO写索引 */
	g_tUsart1.usRxRead = 0;						          /* 接收FIFO读索引 */
	g_tUsart1.usRxCount = 0;						          /* 接收到的新数据个数 */
	g_tUsart1.usTxCount = 0;						          /* 待发送的数据个数 */
	g_tUsart1.SendBefor = 0;						          /* 发送数据前的回调函数 */
	g_tUsart1.SendOver = 0;						          /* 发送完毕后的回调函数 */
	g_tUsart1.ReciveNew = 0;						          /* 接收到新数据后的回调函数 */
#endif

#if USART2_FIFO_EN == 1
	g_tUsart2.usart = USART2;						        /* STM32 串口设备 */
	g_tUsart2.pTxBuf = g_TxBuf2;					        /* 发送缓冲区指针 */
	g_tUsart2.pRxBuf = g_RxBuf2;					        /* 接收缓冲区指针 */
	g_tUsart2.usTxBufSize = USART2_TX_BUF_SIZE;	/* 发送缓冲区大小 */
	g_tUsart2.usRxBufSize = USART2_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUsart2.usTxWrite = 0;			          			/* 发送FIFO写索引 */
	g_tUsart2.usTxRead = 0;						          /* 发送FIFO读索引 */
	g_tUsart2.usRxWrite = 0;						          /* 接收FIFO写索引 */
	g_tUsart2.usRxRead = 0;						          /* 接收FIFO读索引 */
	g_tUsart2.usRxCount = 0;						          /* 接收到的新数据个数 */
	g_tUsart2.usTxCount = 0;						          /* 待发送的数据个数 */
	g_tUsart2.SendBefor = 0;						          /* 发送数据前的回调函数 */
	g_tUsart2.SendOver = 0;						          /* 发送完毕后的回调函数 */
	g_tUsart2.ReciveNew = 0;						          /* 接收到新数据后的回调函数 */
#endif

#if UART5_FIFO_EN == 1
	g_tUsart5.usart = UART5;						        /* STM32 串口设备 */
	g_tUsart5.pTxBuf = g_TxBuf3;					        /* 发送缓冲区指针 */
	g_tUsart5.pRxBuf = g_RxBuf3;					        /* 接收缓冲区指针 */
	g_tUsart5.usTxBufSize = UART5_TX_BUF_SIZE;	/* 发送缓冲区大小 */
	g_tUsart5.usRxBufSize = UART5_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUsart5.usTxWrite = 0;			          			/* 发送FIFO写索引 */
	g_tUsart5.usTxRead = 0;						          /* 发送FIFO读索引 */
	g_tUsart5.usRxWrite = 0;						          /* 接收FIFO写索引 */
	g_tUsart5.usRxRead = 0;						          /* 接收FIFO读索引 */
	g_tUsart5.usRxCount = 0;						          /* 接收到的新数据个数 */
	g_tUsart5.usTxCount = 0;						          /* 待发送的数据个数 */
	g_tUsart5.SendBefor = 0;						          /* 发送数据前的回调函数 */
	g_tUsart5.SendOver = 0;						          /* 发送完毕后的回调函数 */
	g_tUsart5.ReciveNew = 0;						          /* 接收到新数据后的回调函数 */
#endif
}

static void InitHardUsart(void)
{

  GPIO_InitTypeDef GPIO_InitStruct;
  
#if USART1_FIFO_EN == 1		/* 串口1 TX = PA9   RX = PA10 */
    /* 串口外设时钟使能 */
    __HAL_RCC_USART1_CLK_ENABLE();
    /* 使能串口功能引脚GPIO时钟 */
    __HAL_RCC_GPIOB_CLK_ENABLE();  
    /* 串口外设功能GPIO配置 */
    GPIO_InitStruct.Pin = GPIO_PIN_6;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF7_USART1;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);
    
    GPIO_InitStruct.Pin = GPIO_PIN_7;  
    HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);   
  
    husart_debug.Instance = USART1;
    husart_debug.Init.BaudRate = USART1_BAUD;
    husart_debug.Init.WordLength = UART_WORDLENGTH_8B;
    husart_debug.Init.StopBits = UART_STOPBITS_1;
    husart_debug.Init.Parity = UART_PARITY_NONE;
    husart_debug.Init.Mode = UART_MODE_TX_RX;
    husart_debug.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    husart_debug.Init.OverSampling = UART_OVERSAMPLING_16;
    HAL_UART_Init(&husart_debug);
    HAL_NVIC_SetPriority(USART1_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(USART1_IRQn);
    HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);
#endif
  
#if USART2_FIFO_EN == 1		/* 串口2 TX = PA2， RX = PA3  */
    /* 串口外设时钟使能 */
    __HAL_RCC_USART2_CLK_ENABLE();
    /* 使能串口功能引脚GPIO时钟 */
    __HAL_RCC_GPIOD_CLK_ENABLE();  
    /* 串口外设功能GPIO配置 */
    GPIO_InitStruct.Pin = GPIO_PIN_5;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
    
    GPIO_InitStruct.Pin = GPIO_PIN_6;  
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);   
    
    husart_debug.Instance = USART2;
    husart_debug.Init.BaudRate = USART2_BAUD;
    husart_debug.Init.WordLength = UART_WORDLENGTH_8B;
    husart_debug.Init.StopBits = UART_STOPBITS_1;
    husart_debug.Init.Parity = UART_PARITY_NONE;
    husart_debug.Init.Mode = UART_MODE_TX_RX;
    husart_debug.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    husart_debug.Init.OverSampling = UART_OVERSAMPLING_16;
    HAL_UART_Init(&husart_debug);
    HAL_NVIC_SetPriority(USART2_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(USART2_IRQn);
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
#endif

#if UART5_FIFO_EN == 1			/* 串口5 TX = PB10   RX = PB11 */
    /* 串口外设时钟使能 */
    __HAL_RCC_UART5_CLK_ENABLE();
    /* 使能串口功能引脚GPIO时钟 */
    __HAL_RCC_GPIOC_CLK_ENABLE();  
    __HAL_RCC_GPIOD_CLK_ENABLE();  
    /* 串口外设功能GPIO配置 */
    GPIO_InitStruct.Pin = GPIO_PIN_12;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF8_UART5;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);
    
    GPIO_InitStruct.Pin = GPIO_PIN_2;  
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);   
    
    husart_debug.Instance = UART5;
    husart_debug.Init.BaudRate = UART5_BAUD;
    husart_debug.Init.WordLength = UART_WORDLENGTH_8B;
    husart_debug.Init.StopBits = UART_STOPBITS_1;
    husart_debug.Init.Parity = UART_PARITY_NONE;
    husart_debug.Init.Mode = UART_MODE_TX_RX;
    husart_debug.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    husart_debug.Init.OverSampling = UART_OVERSAMPLING_16;
    HAL_UART_Init(&husart_debug);
    HAL_NVIC_SetPriority(UART5_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(UART5_IRQn);
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
#endif
}

USART_FIFO_Typedef *ComToUsart(COM_PORT_E _ucPort)
{
	if (_ucPort == COM1)
	{
#if USART1_FIFO_EN == 1
			return &g_tUsart1;
#else
			return 0;
#endif
	}
	else if (_ucPort == COM2)
	{
#if USART2_FIFO_EN == 1
			return &g_tUsart2;
#else
			return 0;
#endif
	}
	else if (_ucPort == COM5)
	{
#if UART5_FIFO_EN == 1
			return &g_tUsart5;
#else
			return 0;
#endif
	}
	else
	{
		/* 不做任何处理 */
		return 0;
	}
}

static void UsartSend(USART_FIFO_Typedef *_pUsart, uint8_t *_ucaBuf, uint16_t _usLen)
{
	uint16_t i;

	for (i = 0; i < _usLen; i++)
	{
		/* 如果发送缓冲区已经满了，则等待缓冲区空 */
		/* 当 _pUsart->usTxBufSize == 1 时, 下面的函数会死掉(待完善) */
		while (1)
		{
			__IO uint16_t usCount;

			DISABLE_INT();
			usCount = _pUsart->usTxCount;
			ENABLE_INT();

			if (usCount < _pUsart->usTxBufSize)
			{
				break;
			}
		}
		/* 将新数据填入发送缓冲区 */
		_pUsart->pTxBuf[_pUsart->usTxWrite] = _ucaBuf[i];

		DISABLE_INT();
		if (++_pUsart->usTxWrite >= _pUsart->usTxBufSize)
		{
			_pUsart->usTxWrite = 0;
		}
		_pUsart->usTxCount++;
		ENABLE_INT();
	}
	__HAL_UART_ENABLE_IT(&husart_debug, USART_IT_TXE);
}

static void UsartIRQ(USART_FIFO_Typedef *_pUsart)
{
	/* 处理接收中断  */
	if (__HAL_USART_GET_IT_SOURCE(&husart_debug, USART_IT_RXNE))
	{
		/* 从串口接收数据寄存器读取数据存放到接收FIFO */
    //HAL_UART_Receive(&husart_debug,&ch,1,0);
		ch=(uint16_t)((_pUsart->usart)->DR & (uint16_t)0x01FF);
		_pUsart->pRxBuf[_pUsart->usRxWrite] = ch;
		if (++_pUsart->usRxWrite >= _pUsart->usRxBufSize)
		{
			_pUsart->usRxWrite = 0;
		}
		if (_pUsart->usRxCount < _pUsart->usRxBufSize)
		{
			_pUsart->usRxCount++;
		}
		/* 回调函数,通知应用程序收到新数据,一般是发送1个消息或者设置一个标记 */
    if (_pUsart->ReciveNew)
    {
      _pUsart->ReciveNew(ch);
    }
	}

	/* 处理发送缓冲区空中断 */
	if (__HAL_UART_GET_IT_SOURCE(&husart_debug, UART_IT_TXE))
	{
		if (_pUsart->usTxCount == 0)
		{
			/* 发送缓冲区的数据已取完时， 禁止发送缓冲区空中断 （注意：此时最后1个数据还未真正发送完毕）*/
			__HAL_UART_DISABLE_IT(&husart_debug, UART_IT_TXE);

			/* 使能数据发送完毕中断 */
			__HAL_UART_ENABLE_IT(&husart_debug, UART_IT_TC);
		}
		else
		{
			/* 从发送FIFO取1个字节写入串口发送数据寄存器 */
			HAL_UART_Transmit(&husart_debug, &(_pUsart->pTxBuf[_pUsart->usTxRead]),1,0xFFFF);
			if (++_pUsart->usTxRead >= _pUsart->usTxBufSize)
			{
				_pUsart->usTxRead = 0;
			}
			_pUsart->usTxCount--;
		}

	}
	/* 数据bit位全部发送完毕的中断 */
	else if (__HAL_UART_GET_IT_SOURCE(&husart_debug, UART_IT_TC) != RESET)
	{
		if (_pUsart->usTxCount == 0)
		{
			/* 如果发送FIFO的数据全部发送完毕，禁止数据发送完毕中断 */
			__HAL_UART_DISABLE_IT(&husart_debug, UART_IT_TC);

			/* 回调函数, 一般用来处理RS485通信，将RS485芯片设置为接收模式，避免抢占总线 */
			if (_pUsart->SendOver)
			{
				_pUsart->SendOver();
			}
		}
		else
		{
			/* 正常情况下，不会进入此分支 */
			/* 如果发送FIFO的数据还未完毕，则从发送FIFO取1个数据写入发送数据寄存器 */
			HAL_UART_Transmit(&husart_debug, &(_pUsart->pTxBuf[_pUsart->usTxRead]),1,0xFFFF);
			if (++_pUsart->usTxRead >= _pUsart->usTxBufSize)
			{
				_pUsart->usTxRead = 0;
			}
			_pUsart->usTxCount--;
		}
	}
}
